# MusicUtils

./: .gitignore  ClassicalDB.pm  README.md  Utils.py  aconvert.py  acoustidkey  autoencode  autotag.py  cRetag  checkConsistency.py  checkFlac  convert.sh  converter.py  copyTags.py  count  count.py  doSplitFlac  encoding.c  fakeABCDE  findCDDB  findMissing  flacToID3  id3ToFlac  makeBackupSet  makeCatalog.py  makeISOs  makeJSON  mbtag.py  prune  prunedir.py  pyproject.toml  renameSeries  reorg  reorg.py  requirements.txt  retag  setGain  setup.py  tagedit.py  tagit.py  (+2 more)
MusicUtils/: Utils.py  aconvert.py  checkConsistency.py  copyTags.py  hasArt.py  makeCatalog.py  reorg.py  tagedit.py  tagit.py
src/MusicUtils/: reorg.py
